<resources>
	<string name="app_name">Sétáljunk</string>
	
	<string name="setup_page1_header">Leírás</string>
	<string name="setup_page1_description">Ennek az alkalmazásnak az a lényege, hogy serkentse a napi mozgásodat.\nÍgy minden nap fog neked szólni, és te eltudod dönteni mennyit szeretnél az adott nap sétálni.\nAz app méri a te mozgási adataidat, így mindent nyomon tudsz követni.</string>
	<string name="setup_proceed_description">Viszont mielőtt használhatnád az appot, meg kell adnod néhány engedélyt.</string>
	<string name="setup_next_button">Tovább</string>
	
	<string name="setup_give_perms">Megadás</string>
	<string name="setup_page2_header">Engedélyek</string>
	<string name="setup_perm_gps">Tartózkodási hely</string>
	<string name="setup_perm_gps_description">Erre az engedélyre azért van szükség, hiszen az applikáció nem tudná nyomonkövetni, hogy merre jársz.</string>
	<string name="setup_perm_camera">Kamera</string>
	<string name="setup_perm_camera_description">Erre az engedélyre azért van szükség, hogy be tudd scannelni a barátaid által megosztott QR-kódot.</string>
	<string name="setup_perm_optional">(Nem kötelező)</string>
	<string name="setup_perm_notification">Értesítések</string>
	<string name="setup_perm_notification_description">Erre az engedélyre azért van szükség, hogy az app tudjon neked minden nap szólni, hogy mozogj.</string>
	<string name="setup_perm_steps">Lépésszámláló</string>
	<string name="setup_perm_steps_description">Erre az engedélyre azért van szükség, hogy az app tudja, mennyi lépést tettél meg.</string>
	
	<string name="main_gps_missing_services">Kérlek kapcsold be az internetet, és a GPS-t!</string>
	<string name="main_usage_helper">Válaszd ki a sétálni kívánt távolságot, majd nyomd meg a séta indítása gombot.</string>
	<string name="main_usage_generation_in_progress">Várj egy pillanatot!\nHamarosan már úton is lehetsz.</string>
	<string name="main_usage_helper_stop">Nyomd meg a gombot, ha mégse szeretnél sétálni.</string>
	<string name="main_seekbar_min_distance">100m</string>
	<string name="main_seekbar_max_distance">5000m</string>
	<string name="main_popup_no_sensory_header">Hiányzó Funkciók</string>
	<string name="main_popup_no_sensory_description">Kérlek kapcsold be az internet elérést, és a GPS funkciót, hogy tudd használni az alkalmazást!</string>
	<string name="main_popup_no_sensory_action_ok">Ok</string>
	
	<string name="stats_header">Statisztika</string>
	<string name="stats_steps_total">Lépések:</string>
	<string name="stats_steps_total_string">%1$sdb</string>
	<string name="stats_calories_total">Elégetett kalóriák:</string>
	<string name="stats_calories_total_string">%1$skcal</string>
	<string name="stats_distance_total">Megjárt távolság:</string>
	<string name="stats_distance_total_string">%1$skm</string>
	<string name="stats_total_header">Összesített adataid:</string>
	<string name="stats_view_daily_button">Alkalmi bontás</string>
	
	<string name="qr_header">Megosztás</string>
	<string name="qr_scanpage_otherqr_header">Szkenneld be a QR kódot a barátod telefonjáról!</string>
	<string name="qr_scanpage_otherqr_help">Amennyiben te szeretnél megosztani QR kódot, indítsd el a navigációt.</string>
	<string name="qr_scanpage_myqr_header">Mutasd meg a barátodnak ezt a QR kódot!</string>
	<string name="qr_scanpage_myqr_help">Amennyiben te szeretnél beolvasni QR kódot, állítsd le a navigációt.</string>
	<string name="qr_popup_no_camera_header">Kamera Engedély</string>
	<string name="qr_popup_no_camera_description">Kérlek adj hozzáférést az alkalmazásnak a kamerához, hogy be tudd olvasni a QR-kódot</string>
	<string name="qr_popup_no_camera_no">Vissza</string>
	<string name="qr_popup_no_camera_yes">Engedélyezés</string>
	
	<string name="step_service_notification_text">Lépészámláló</string>
	
	<string name="daily_notification_text">Ideje Sétálni</string>
	<string name="daily_notification_textsub">Itt az ideje a mai sétálásnak!</string>
</resources>