<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".SetupActivity">
	
	<androidx.core.widget.NestedScrollView
		android:layout_weight="24"
		android:layout_width="match_parent"
		android:layout_marginStart="20dp"
		android:layout_marginTop="20dp"
		android:layout_marginEnd="20dp"
		android:layout_marginBottom="20dp"
		android:layout_height="wrap_content">
		
		<androidx.appcompat.widget.LinearLayoutCompat
			android:id="@+id/linearLayoutCompat"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="vertical">
			
			<ViewFlipper
				android:id="@+id/view_flipper"
				android:layout_width="match_parent"
				android:layout_height="match_parent">
				
				<androidx.appcompat.widget.LinearLayoutCompat
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:orientation="vertical">
					
					<com.google.android.material.textview.MaterialTextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="center"
						android:text="@string/setup_page1_header"
						android:textColor="?attr/colorPrimary"
						android:textSize="48sp"
						android:textStyle="bold" />
					
					<Space
						android:layout_width="match_parent"
						android:layout_height="72dp" />
					
					<androidx.appcompat.widget.LinearLayoutCompat
						style="@style/AppLayoutStyle"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="horizontal">
						
						<ImageView
							style="@style/AppImageViewStyle"
							android:layout_width="48dp"
							android:layout_height="48dp"
							android:contentDescription="@string/setup_perm_gps"
							android:src="@drawable/ic_help" />
						
						<com.google.android.material.textview.MaterialTextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:text="@string/setup_page1_description"
							android:textColor="?attr/colorPrimary"
							android:textSize="18sp"
							android:textStyle="normal" />
					
					</androidx.appcompat.widget.LinearLayoutCompat>
					
					<Space
						android:layout_width="match_parent"
						android:layout_height="16dp" />
					
					<androidx.appcompat.widget.LinearLayoutCompat
						style="@style/AppLayoutStyle"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="horizontal">
						
						<ImageView
							style="@style/AppImageViewStyle"
							android:layout_width="48dp"
							android:layout_height="48dp"
							android:contentDescription="@string/setup_perm_gps"
							android:src="@drawable/ic_info" />
						
						<com.google.android.material.textview.MaterialTextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:text="@string/setup_proceed_description"
							android:textColor="?attr/colorPrimary"
							android:textSize="18sp"
							android:textStyle="bold" />
					
					</androidx.appcompat.widget.LinearLayoutCompat>
				
				</androidx.appcompat.widget.LinearLayoutCompat>
				
				<androidx.appcompat.widget.LinearLayoutCompat
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="vertical">
					
					<com.google.android.material.textview.MaterialTextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="center"
						android:text="@string/setup_page2_header"
						android:textColor="?attr/colorPrimary"
						android:textSize="48sp"
						android:textStyle="bold" />
					
					<Space
						android:layout_width="match_parent"
						android:layout_height="72dp" />
					
					<androidx.appcompat.widget.LinearLayoutCompat
						android:id="@+id/gps_view"
						style="@style/AppLayoutStyle"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_gravity="center"
						android:gravity="center"
						android:orientation="vertical">
						
						<androidx.appcompat.widget.LinearLayoutCompat
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_gravity="center"
							android:gravity="center"
							android:orientation="horizontal">
							
							<ImageView
								style="@style/AppImageViewStyle"
								android:layout_width="48dp"
								android:layout_height="48dp"
								android:contentDescription="@string/setup_perm_gps"
								android:src="@drawable/ic_location" />
							
							<androidx.appcompat.widget.AppCompatTextView
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:text="@string/setup_perm_gps"
								android:textAlignment="center"
								android:textColor="?attr/colorPrimary"
								android:textSize="24sp"
								android:textStyle="bold" />
						
						</androidx.appcompat.widget.LinearLayoutCompat>
						
						<Space
							android:layout_width="wrap_content"
							android:layout_height="8dp" />
						
						<androidx.appcompat.widget.AppCompatTextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/setup_perm_gps_description"
							android:textColor="?attr/colorPrimary"
							android:textSize="16sp"
							android:textStyle="normal" />
						
						<Space
							android:layout_width="wrap_content"
							android:layout_height="8dp" />
						
						<com.google.android.material.button.MaterialButton
							android:id="@+id/gps_button"
							style="@style/AppButtonStyle"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/setup_give_perms" />
					
					</androidx.appcompat.widget.LinearLayoutCompat>
					
					<Space
						android:layout_width="match_parent"
						android:layout_height="16dp" />
					
					<androidx.appcompat.widget.LinearLayoutCompat
						android:id="@+id/camera_view"
						style="@style/AppLayoutStyle"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_gravity="center"
						android:gravity="center"
						android:orientation="vertical">
						
						<androidx.appcompat.widget.LinearLayoutCompat
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_gravity="center"
							android:gravity="center"
							android:orientation="horizontal">
							
							<ImageView
								style="@style/AppImageViewStyle"
								android:layout_width="48dp"
								android:layout_height="48dp"
								android:contentDescription="@string/setup_perm_camera"
								android:src="@drawable/ic_camera" />
							
							<androidx.appcompat.widget.AppCompatTextView
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:text="@string/setup_perm_camera"
								android:textAlignment="center"
								android:textColor="?attr/colorPrimary"
								android:textSize="24sp"
								android:textStyle="bold" />
						
						</androidx.appcompat.widget.LinearLayoutCompat>
						
						<androidx.appcompat.widget.AppCompatTextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/setup_perm_camera_description_optional"
							android:textAlignment="center"
							android:textColor="?attr/colorPrimary"
							android:textSize="12sp"
							android:textStyle="normal" />
						
						<Space
							android:layout_width="wrap_content"
							android:layout_height="8dp" />
						
						<androidx.appcompat.widget.AppCompatTextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/setup_perm_camera_description"
							android:textColor="?attr/colorPrimary"
							android:textSize="16sp"
							android:textStyle="normal" />
						
						<Space
							android:layout_width="wrap_content"
							android:layout_height="8dp" />
						
						<com.google.android.material.button.MaterialButton
							android:id="@+id/camera_button"
							style="@style/AppButtonStyle"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/setup_give_perms" />
					
					</androidx.appcompat.widget.LinearLayoutCompat>
					
					<Space
						android:layout_width="match_parent"
						android:layout_height="16dp" />
					
					<androidx.appcompat.widget.LinearLayoutCompat
						android:id="@+id/steps_view"
						style="@style/AppLayoutStyle"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_gravity="center"
						android:gravity="center"
						android:orientation="vertical">
						
						<androidx.appcompat.widget.LinearLayoutCompat
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_gravity="center"
							android:gravity="center"
							android:orientation="horizontal">
							
							<ImageView
								style="@style/AppImageViewStyle"
								android:layout_width="48dp"
								android:layout_height="48dp"
								android:contentDescription="@string/setup_perm_steps"
								android:src="@drawable/ic_walk" />
							
							<androidx.appcompat.widget.AppCompatTextView
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:text="@string/setup_perm_steps"
								android:textAlignment="center"
								android:textColor="?attr/colorPrimary"
								android:textSize="24sp"
								android:textStyle="bold" />
						
						</androidx.appcompat.widget.LinearLayoutCompat>
						
						<Space
							android:layout_width="wrap_content"
							android:layout_height="8dp" />
						
						<androidx.appcompat.widget.AppCompatTextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/setup_perm_steps_description"
							android:textColor="?attr/colorPrimary"
							android:textSize="16sp"
							android:textStyle="normal" />
						
						<Space
							android:layout_width="wrap_content"
							android:layout_height="8dp" />
						
						<com.google.android.material.button.MaterialButton
							android:id="@+id/steps_button"
							style="@style/AppButtonStyle"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/setup_give_perms" />
					
					</androidx.appcompat.widget.LinearLayoutCompat>
				
				</androidx.appcompat.widget.LinearLayoutCompat>
			
			</ViewFlipper>
		
		</androidx.appcompat.widget.LinearLayoutCompat>
	
	</androidx.core.widget.NestedScrollView>
	
	<com.google.android.material.button.MaterialButton
		android:layout_weight="1"
		android:id="@+id/next_button"
		style="@style/AppButtonStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginBottom="20dp"
		android:paddingStart="72dp"
		android:paddingEnd="72dp"
		android:text="@string/setup_next_button" />
	
</androidx.appcompat.widget.LinearLayoutCompat>