<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".activities.QRActivity"
	android:orientation="vertical">
	
	<androidx.appcompat.widget.LinearLayoutCompat
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:gravity="center"
		android:layout_marginStart="20dp"
		android:layout_marginTop="20dp"
		android:layout_marginEnd="20dp"
		android:layout_marginBottom="20dp"
		android:orientation="horizontal">
		
		<androidx.appcompat.widget.AppCompatImageButton
			android:id="@+id/navigate_back_button"
			style="@style/AppImageButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:hapticFeedbackEnabled="true"
			android:src="@drawable/ic_back" />
		
		<Space
			android:layout_width="8dp"
			android:layout_height="wrap_content" />
		
		<com.google.android.material.textview.MaterialTextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/qr_header"
			android:textColor="?attr/colorPrimary"
			android:textSize="24sp"
			android:textStyle="bold" />
	
	</androidx.appcompat.widget.LinearLayoutCompat>
	
	<androidx.core.widget.NestedScrollView
		android:layout_weight="1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginStart="20dp"
		android:layout_marginEnd="20dp"
		android:layout_marginBottom="20dp">
		
		<androidx.appcompat.widget.LinearLayoutCompat
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingTop="20dp"
			android:paddingBottom="20dp"
			android:layout_gravity="center"
			android:gravity="center">
			
			<androidx.appcompat.widget.LinearLayoutCompat
				android:visibility="gone"
				android:id="@+id/layout_display_qr"
				style="@style/AppLayoutStyle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:gravity="center"
				android:orientation="vertical">
				
				<com.google.android.material.textview.MaterialTextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/qr_scanpage_myqr_header"
					android:textColor="?attr/colorPrimary"
					android:layout_gravity="center"
					android:gravity="center"
					android:textSize="24sp"
					android:textStyle="normal" />
				
				<Space
					android:layout_width="match_parent"
					android:layout_height="8dp"/>
				
				<com.google.android.material.textview.MaterialTextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/qr_scanpage_myqr_help"
					android:textColor="?attr/colorPrimary"
					android:layout_gravity="center"
					android:gravity="start"
					android:textSize="14sp"
					android:textStyle="bold" />
				
				<Space
					android:layout_width="match_parent"
					android:layout_height="32dp"/>
				
				<ImageView
					android:id="@+id/qrcode_holder"
					android:contentDescription="qr code"
					android:layout_width="344dp"
					android:layout_height="344dp"/>
			
			</androidx.appcompat.widget.LinearLayoutCompat>
			
			<androidx.appcompat.widget.LinearLayoutCompat
				android:id="@+id/layout_scan_qr"
				style="@style/AppLayoutStyle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:gravity="center"
				android:orientation="vertical">
				
				<com.google.android.material.textview.MaterialTextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/qr_scanpage_otherqr_header"
					android:textColor="?attr/colorPrimary"
					android:layout_gravity="center"
					android:gravity="center"
					android:textSize="24sp"
					android:textStyle="normal" />
				
				<Space
					android:layout_width="match_parent"
					android:layout_height="8dp"/>
				
				<com.google.android.material.textview.MaterialTextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/qr_scanpage_otherqr_help"
					android:textColor="?attr/colorPrimary"
					android:layout_gravity="center"
					android:gravity="start"
					android:textSize="14sp"
					android:textStyle="bold" />
				
				<Space
					android:layout_width="match_parent"
					android:layout_height="32dp"/>
				
				<com.domedav.setaljunk.views.SquareSurfaceView
					android:id="@+id/live_camera_view"
					android:layout_width="344dp"
					android:layout_height="344dp"/>
			
			</androidx.appcompat.widget.LinearLayoutCompat>
			
		</androidx.appcompat.widget.LinearLayoutCompat>
	
	</androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>